# trustworthy-MRI-reconstruction

./: .gitignore  README.md  final_plan.md  main.py  pyproject.toml  visualize_fastmri.py  visualize_undersampling.py
dataset/: README.md
dataset/fastmri_pd/: README.md
dataset/processed_data/: README.md
notebooks/: README.md  train.ipynb
notebooks/4x_trained_notebook/: 4x_training.ipynb  results.md
notebooks/8x_trained_notebook/: results.md  train_colab.ipynb
paper/: lit-review.md  paper.tex  references.bib
scripts/: bootstrap_and_histogram.py  combined_calibration_figure.py  gamma_ablation.py  generate_figures.py  kspace_cp_scatter.py  run_evaluate.py  run_train.py  smoke_test.py  smoke_test_paranoid.py
src/mri/: config.py  conformal.py  data.py  kspace_consistency.py  losses.py  masks.py  mc_dropout.py  metrics.py  train.py  unet.py  viz.py
tests/: test_conformal.py  test_data.py  test_kspace.py  test_losses.py  test_masks.py  test_unet.py
